Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
gst-editing-services
gst-editing-services
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 77
    • Issues 77
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 10
    • Merge Requests 10
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Snippets
    • Snippets
  • Members
    • Members
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamer
  • gst-editing-servicesgst-editing-services
  • Issues
  • #62

Closed
Open
Opened Feb 05, 2019 by Philippe Normand@philn🥑Maintainer

test_transition_type (python.test_timeline.TestTransitions) fails

https://gitlab.freedesktop.org/philn/gst-ci/-/jobs/99227

======================================================================
FAIL: test_transition_type (python.test_timeline.TestTransitions)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/builds/philn/gst-ci/gst-build/subprojects/gst-editing-services/tests/check/python/test_timeline.py", line 306, in test_transition_type
    self.assertLess(clip1.props.start, clip2.props.start)
AssertionError: 3225722559 not less than 3225722559

----------------------------------------------------------------------
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: gstreamer/gst-editing-services#62